# trigger

./: .clang-format  .gitmodules  CMakeLists.txt  activate_obs_source.cc  activate_obs_source.h  blog_log_sink.h  create_obs_source.cc  create_obs_source.h  deactivate_obs_source.cc  deactivate_obs_source.h  destroy_obs_source.cc  destroy_obs_source.h  get_obs_properties.h  get_settings_from_obs_data.cc  get_settings_from_obs_data.h  plugin_main.cc  settings.h  trigger.cc  trigger.h  update_obs_settings.cc  update_obs_settings.h
